adds in custom styling that is specific to the posit product doc theme.
These changes need to be backported to the theme but due to the timeline, we are manually adding them into the extension and will remove them later when we have time to fold them into the theme and roll the theme out to workbench

--- a/example.qmd
+++ b/example.qmd
@@ -23,7 +23,7 @@ extensions:
 Here's how to read data from a CSV file:
 
 ::: {.content-switcher version="v2026.01"}
-### version 2026.01.0 Example {.unlisted}
+## version 2026.01.0 Example {.unlisted}
 
 Use pandas to read CSV data:
 
