--- a/example.qmd
+++ b/example.qmd
@@ -37,6 +37,7 @@ print(data.head())
 ::: {.content-switcher version="v2.0"}
 ### version 2.0 example {.unlisted}
 
+This is a test for searching. I
 Use readr to read CSV data:
 
 ```r
@@ -47,7 +48,7 @@ head(data)
 :::
 
 ::: {.content-switcher version="v3.0"}
-### version 3.0 Example {.unlisted}
+## version 3.0 Example {.unlisted}
 
 Use CSV.jl to read CSV data:
 
